test/test_11710324_2.out
Error type B at Line 1: Missing comma ','
Error type B at Line 4: Missing semicolon ';'
Error type B at Line 6: Missing closing '
