test/test_11710324_2.spl
int test_1_m01(int a int b)
{
  int code, new;
  code 1;
  new = code + 1;
  return hello('a, new);
}